added defer to main script

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,8 @@
       async
     ></script>
 
+    <script src="js/main.js" defer></script>
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -161,6 +163,5 @@
         </div> -->
       </div>
     </div>
-    <script src="js/main.js"></script>
   </body>
 </html>
