Got rid of baseurl

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 
     <title>Thomas Steeples</title>
 
-    <base href="{{{base_url}}}" />
+    <!-- <base href="{{{base_url}}}" /> -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <script
