--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <title>Thomas Steeples</title>
 
-    <base href="127.0.0.1" />
+    <!-- <base href="127.0.0.1" /> -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <script
