--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-  For open source software used, refer to 
+  For open source software used, refer to credits.txt in the root of the site.
 -->
 
 <head>
@@ -37,7 +37,8 @@
                 media/self_portrait_500px.jpg 2x,
                 media/self_portrait_750px.jpg 3x
               " type="image/jpeg" />
-          <img src="media/self_portrait_750px.jpg" alt="Portrait of Thomas Steeples" id="self-portrait" />
+          <img src="media/self_portrait_750px.jpg" width="750px" height="1125px" alt="Portrait of Thomas Steeples"
+            id="self-portrait" />
         </picture>
       </a>
       <h1>Thomas Steeples</h1>
@@ -79,8 +80,8 @@
         <h2 tabindex="0">
           <svg class="feather-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
-            <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z" />
+            <circle cx="12" cy="8" r="7" />
+            <polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88" />
           </svg>
           Education
         </h2>
