moving over to gerty

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 media/self_portrait_500px.jpg 2x,
                 media/self_portrait_750px.jpg 3x
               " type="image/jpeg" />
-          <img src="media/self_portrait_750px.jpg" width="750px" height="1125px" alt="Portrait of Thomas Steeples"
+          <img src="media/self_portrait_750px.jpg" width="750" height="1125" alt="Portrait of Thomas Steeples"
             id="self-portrait" />
         </picture>
       </a>
@@ -50,7 +50,7 @@
           <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
           <polyline points="22,6 12,13 2,6" />
         </svg>
-        </span></a>
+      </a>
     </div>
     <div id="accordion">
       <div class="panel">
