--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
                 media/self_portrait_500px.jpg 2x,
                 media/self_portrait_750px.jpg 3x
               " type="image/jpeg" />
-          <img src="media/self_portrait_750px.jpg" width="750px" height="1125px" alt="Portrait of Thomas Steeples"
+          <img src="media/self_portrait_750px.jpg" width="750" height="1125" alt="Portrait of Thomas Steeples"
             id="self-portrait" />
         </picture>
       </a>
