--- a/html/credits.html
+++ b/html/credits.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+    For open source licenses, see credits.html.
+-->
 <html lang="en">
 
 <head>
@@ -74,6 +77,39 @@
                 use
                 the
                 following open-source projects in the public-facing part of my website:</p>
+
+            <h3>Normalize.css</h3>
+
+            <p>
+                Components of <a href="https://github.com/necolas/normalize.css">Normalize.css</a> have been used in the
+                stylesheet. Normalize.css is used under the MIT License:
+            </p>
+            <blockquote>
+
+                <h4>The MIT License (MIT)</h4>
+                <p>
+                    Copyright © Nicolas Gallagher and Jonathan Neal
+                </p>
+                <p>Permission is hereby granted, free of charge, to any person obtaining a copy of
+                    this software and associated documentation files (the "Software"), to deal in
+                    the Software without restriction, including without limitation the rights to
+                    use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
+                    of the Software, and to permit persons to whom the Software is furnished to do
+                    so, subject to the following conditions:
+                </p>
+                <p>
+                    The above copyright notice and this permission notice shall be included in all
+                    copies or substantial portions of the Software.
+                </p>
+                <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+                    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+                    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+                    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+                    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+                    SOFTWARE.
+                </p>
+            </blockquote>
 
             <h3>Feather Icons</h3>
 
