--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-  For open source software used, refer to credits.html at the root of the site.
+  For open source licenses, see credits.html.
 -->
 <html lang="en">
 
@@ -62,7 +62,7 @@
           </svg>
           About
         </h2>
-        <div class="contents">
+        <div id="initially-open-contents" class="contents">
           <p>
             I am a DPhil student at the University of Oxford, on the
             Autonomous Intelligent Machines and Systems CDT, a joint programme
@@ -85,7 +85,7 @@
           </svg>
           Education
         </h2>
-        <div hidden class="contents">
+        <div class="contents">
           <dl>
             <dt>
               <strong>DPhil in Autonomous Intelligent Machines and Systems</strong>
@@ -113,7 +113,7 @@
           </svg>
           Experience
         </h2>
-        <div hidden class="contents">
+        <div class="contents">
           <dl>
             <dt><strong>IBM</strong></dt>
             <dd>2017 - 2018 · Technology Consultant</dd>
@@ -133,7 +133,7 @@
           </svg>
           Publications
         </h2>
-        <div hidden class="contents">
+        <div class="contents">
           <ul>
             <li>
               Thomas Steeples, Julian Gutierrez, Michael J. Wooldridge:
