--- a/html/index.html
+++ b/html/index.html
@@ -135,24 +135,29 @@
         </h2>
         <div class="contents">
           <ul>
+	    <li>
+	      	Alessandro Abate, Julian Gutierrez, Lewis Hammond, Paul Harrenstein, Marta Kwiatkowska, Muhammad Najib, Giuseppe Perelli, Thomas Steeples, Michael J. Wooldridge:
+	      <strong><a href="papers/abate2021.pdf">Rational Verification: Game-Theoretic Verification of Multi-Agent Systems.</a></strong>
+	      Applied Intelligence 51, 6569–6584 (2021).
+	      </li>
             <li>
               Thomas Steeples, Julian Gutierrez, Michael J. Wooldridge:
               <strong><a href="papers/steeples2021.pdf">Mean-Payoff Games with ω-Regular Specifications.</a></strong>
-              AAMAS 2021: 1272-1280
+              AAMAS 2021: 1272-1280.
             </li>
             <li>
               Julian Gutierrez, Aniello Murano, Giuseppe Perelli, Sasha Rubin,
               Thomas Steeples, Michael J. Wooldridge:
               <strong><a href="papers/gutierrez2020.pdf">Equilibria for Games with Combined Qualitative and
                   Quantitative Objectives.</a></strong>
-              CoRR abs/2008.05643 (2020)
+              Acta Informatica (2020). 
             </li>
             <li>
               Julian Gutierrez, Paul Harrenstein, Thomas Steeples, Michael J.
               Wooldridge:
               <strong><a href="papers/gutierrez2018.pdf">Local Equilibria in Logic-Based Multi-Player
                   Games.</a></strong>
-              AAMAS 2018: 399-406
+              AAMAS 2018: 399-406.
             </li>
           </ul>
         </div>
