Updating post TWS

--- a/html/index.html
+++ b/html/index.html
@@ -22,16 +22,16 @@
 <body>
   <div id="main-container">
     <div id="strapline">
-      <a href="media/self_portrait.jpg"><picture><source srcset=
-      "media/self_portrait_250px.webp 1x, media/self_portrait_500px.webp 2x, media/self_portrait_750px.webp 3x"
+      <a href="media/portrait-with-tie.jpg"><picture><source srcset=
+      "media/portrait-with-tie-250px.webp 1x, media/portrait-with-tie-500px.webp 2x, media/portrait-with-tie-750px.webp 3x"
       type="image/webp"> <source srcset=
-      "media/self_portrait_250px.jpg 1x, media/self_portrait_500px.jpg 2x, media/self_portrait_750px.jpg 3x"
-      type="image/jpeg"> <img src="media/self_portrait_750px.jpg" width="750"
+      "media/portrait-with-tie-250px.jpg 1x, media/portrait-with-tie-500px.jpg 2x, media/portrait-with-tie-750px.jpg 3x"
+      type="image/jpeg"> <img src="media/portrait-with-tie-750px.jpg" width="750"
       height="1125" alt="Portrait of Thomas Steeples" id=
       "self-portrait"></picture></a>
       <h1>Thomas Steeples</h1>
-      <h2>DPhil in Autonomous Intelligent Machines and Systems</h2>
-      <h3>University of Oxford</h3><a href="mailto:thomas.steeples@cs.ox.ac.uk"
+      <h2>Consultant</h2>
+      <h3>TWS Partners</h3><a href="mailto:thomas.steeples@tws-partners.com"
       class="strapline-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24"
       height="24" viewbox="0 0 24 24" fill="none" stroke="currentcolor"
       stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class=
@@ -57,14 +57,12 @@
         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
         <circle cx="12" cy="7" r="4"></circle></svg> About</h2>
         <div id="initially-open-contents" class="contents">
-          <p>I am a DPhil student at the University of Oxford, on the
-          Autonomous Intelligent Machines and Systems CDT, a joint programme
-          between Information Engineering and Computer Science. Broadly, my
-          research interests lie across logic, complexity and games, and in
-          particular, their application to Artificial Intelligence.</p>
-          <p>When I'm not proving theorems (or at least trying to), I can be
-          found photographing the streets of Oxford and playing <a href=
-          "https://lichess.org/@/tsteeples">chess</a> .</p>
+          <p>
+	    I am a consultant for TWS Partners, on the Autonomous Intelligent Machines and Systems CDT, a joint programme between Information Engineering and Computer Science. Broadly, my research interests lie across logic, complexity and games, and in particular, their application to Artificial Intelligence.
+	  </p>
+          <p>
+	    When I'm not proving theorems (or at least trying to), I can be found photographing the streets of Oxford and playing <a href="https://lichess.org/@/tsteeples">chess</a>.
+	  </p>
         </div>
       </div>
       <div class="panel">
@@ -102,6 +100,9 @@
         <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg>
         Experience</h2>
         <div class="contents">
+	  <dl>
+	    <dt><strong>TWS Partners</strong></dt>
+	    <dd>2022 - Present · Consultant</dd>
           <dl>
             <dt><strong>IBM</strong></dt>
             <dd>2017 - 2018 · Technology Consultant</dd>
