Pre-christmas commit

--- a/html/index.html
+++ b/html/index.html
@@ -23,11 +23,11 @@
   <div id="main-container">
     <div id="strapline">
       <a href="media/portrait-with-tie.jpg"><picture><source srcset=
-      "media/portrait-with-tie-250px.webp 1x, media/portrait-with-tie-500px.webp 2x, media/portrait-with-tie-750px.webp 3x"
+      "media/portrait-with-tie-500px.webp 1x, media/portrait-with-tie-1000px.webp 2x, media/portrait-with-tie-1500px.webp 3x"
       type="image/webp"> <source srcset=
-      "media/portrait-with-tie-250px.jpg 1x, media/portrait-with-tie-500px.jpg 2x, media/portrait-with-tie-750px.jpg 3x"
-      type="image/jpeg"> <img src="media/portrait-with-tie-750px.jpg" width="750"
-      height="1125" alt="Portrait of Thomas Steeples" id=
+      "media/portrait-with-tie-500px.jpg 1x, media/portrait-with-tie-1000px.jpg 2x, media/portrait-with-tie-1500px.jpg 3x"
+      type="image/jpeg"> <img src="media/portrait-with-tie-1500px.jpg" width="1500"
+      height="1000" alt="Portrait of Thomas Steeples" id=
       "self-portrait"></picture></a>
       <h1>Thomas Steeples</h1>
       <h2>Consultant</h2>
@@ -58,10 +58,10 @@
         <circle cx="12" cy="7" r="4"></circle></svg> About</h2>
         <div id="initially-open-contents" class="contents">
           <p>
-	    I am a consultant for TWS Partners, on the Autonomous Intelligent Machines and Systems CDT, a joint programme between Information Engineering and Computer Science. Broadly, my research interests lie across logic, complexity and games, and in particular, their application to Artificial Intelligence.
+	    I work for TWS Partners, a game theory consultancy. Prior to this, I completed my DPhil at the University of Oxford, working on <em>quantitative rational verification</em>. Broadly, my research interests lie across logic, complexity and games, and in particular, their application to Artificial Intelligence.
 	  </p>
           <p>
-	    When I'm not proving theorems (or at least trying to), I can be found photographing the streets of Oxford and playing <a href="https://lichess.org/@/tsteeples">chess</a>.
+	    Outside of work, I enjoy cooking, trying to get an endless number of side projects off the ground, and playing <a href="https://lichess.org/@/tsteeples">chess</a> poorly.
 	  </p>
         </div>
       </div>
@@ -78,6 +78,7 @@
             <dt><strong>DPhil in Autonomous Intelligent Machines and
             Systems</strong></dt>
             <dd>2018 - 2022 · University of Oxford</dd>
+	    <dd>Thesis: Quantitative Rational Verification</dd>
           </dl>
           <dl>
             <dt><strong>MSc in Computer Science</strong></dt>
@@ -123,6 +124,8 @@
         Publications</h2>
         <div class="contents">
           <ul>
+	    <li>Julian Gutierrez, Szymon Kowara, Sarit Kraus, Thomas Steeples, Michael Wooldridge:
+	      <strong><a>Cooperative concurrent games.</a></strong> Artificial Intelligence (2023)</li>
             <li>Julian Gutierrez, Thomas Steeples, Michael Wooldridge:
             <strong><a>Mean-Payoff Games with ω-Regular
             Specifications.</a></strong> Games (2022)</li>
