Slowly tuning website up

--- a/html/index.html
+++ b/html/index.html
@@ -111,23 +111,17 @@
               <dd>
                 2022 - Present · Consultant
               </dd>
+              <dt>
+                <strong>IBM</strong>
+              </dt>
               <dd>
-                <dl>
-                  <dt>
-                    <strong>IBM</strong>
-                  </dt>
-                  <dd>
-                    2017 - 2018 · Technology Consultant
-                  </dd>
-                </dl>
-                <dl>
-                  <dt>
-                    <strong>KPMG</strong>
-                  </dt>
-                  <dd>
-                    2011 - 2012 · Audit Assistant
-                  </dd>
-                </dl>
+                2017 - 2018 · Technology Consultant
+              </dd>
+              <dt>
+                <strong>KPMG</strong>
+              </dt>
+              <dd>
+                2011 - 2012 · Audit Assistant
               </dd>
             </dl>
           </div>
@@ -140,9 +134,9 @@
           </h2>
           <div class="contents">
             <ul>
-              <li>Julian Gutierrez, Szymon Kowara, Sarit Kraus, Thomas Steeples, Michael Wooldridge: <strong><a>Cooperative concurrent games.</a></strong> Artificial Intelligence (2023)
+              <li>Julian Gutierrez, Szymon Kowara, Sarit Kraus, Thomas Steeples, Michael Wooldridge: <strong><a href="papers/gutierrez2022b.pdf">Cooperative concurrent games.</a></strong> Artificial Intelligence (2023)
               </li>
-              <li>Julian Gutierrez, Thomas Steeples, Michael Wooldridge: <strong><a>Mean-Payoff Games with ω-Regular Specifications.</a></strong> Games (2022)
+              <li>Julian Gutierrez, Thomas Steeples, Michael Wooldridge: <strong><a href="papers/gutierrez2022a.pdf">Mean-Payoff Games with ω-Regular Specifications.</a></strong> Games (2022)
               </li>
               <li>Alessandro Abate, Julian Gutierrez, Lewis Hammond, Paul Harrenstein, Marta Kwiatkowska, Muhammad Najib, Giuseppe Perelli, Thomas Steeples, Michael J. Wooldridge: <strong><a href="papers/abate2021.pdf">Rational Verification: Game-Theoretic Verification of Multi-Agent Systems.</a></strong> Applied Intelligence 51, 6569–6584 (2021).
               </li>
