--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="/src/main.tsx" defer></script>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
