--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thomas Steeples's Personal Website</title>
+    <meta name="author" content="Thomas Steeples" />
+    <meta name="description" content="Thomas Steeples's personal website" />
+    <title>Thomas Steeples's personal website</title>
     <script type="module" src="/src/main.tsx" defer></script>
   </head>
   <body>
